--- a/Brick Breaker/styles.css
+++ b/Brick Breaker/styles.css
@@ -12,10 +12,19 @@ background-color: red;
 border: solid blue 1px;
 }
 
-.userStick{ 
+.user{ 
     position: absolute;
     width: 100px;
     height: 20px;
     background-color: black;
-    border: solid blue 1px;
+    
     }
+
+    .ball{ 
+        position: absolute;
+        border-radius: 10px;
+        width: 20px;
+        height: 20px;
+        background-color: green;
+        
+        }
